# fhelalib

./: .gitignore  Cargo.toml  README.md  test_resul.txt
benches/: bootstrap.rs  eval.rs
examples/arithmetics/: main.rs
examples/strings/: main.rs
proptest-regressions/math/polynomial/: polynomial.txt
proptest-regressions/tfhe/GLWE/: glwe.txt
proptest-regressions/tfhe/ggsw/: ggsw.txt
proptest-regressions/tfhe/secret_key/: secret_key.txt
src/: lib.rs
src/math/: mod.rs
src/math/modular/: mod.rs  mod_arith.rs  module_switch.rs
src/math/polynomial/: ct_ntt.rs  mod.rs  polynomial.rs  polynomial_ntt_form.rs
src/random/: random.rs
src/tfhe/: mod.rs  schemas.rs
src/tfhe/GLWE/: glwe.rs  mod.rs
src/tfhe/ggsw/: ggsw.rs  mod.rs
src/tfhe/lwe/: lwe.rs  mod.rs
src/tfhe/secret_key/: mod.rs  secret_key.rs
src/tfhe/server_key/: cmux.rs  extract_sample.rs  mod.rs  server_key.rs
