[package]
name = "tfhela"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
num = "0.4.3"
rand = "0.8.5"
rand_distr = "0.4.3"
round = "0.1.2"
serde = "1.0.203"
serde_json = "1.0.120"

[dev-dependencies]
proptest-derive = "0.5.0"
proptest = "1.5.0"


[[example]]
name = "strings"
path = "examples/strings/main.rs"
