[package]
name = "tfhela"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
cached = "0.53.1"
colored = "2.1.0"
num = "0.4.3"
rand = "0.8.5"
rand_distr = "0.4.3"
round = "0.1.2"
serde = "1.0.203"
serde_json = "1.0.120"

[dev-dependencies]
colored = "2.1.0"
clap = { version = "4.3.13", features = ["derive"] }
proptest-derive = "0.5.0"
proptest = "1.5.0"
criterion = { version = "0.5.1", features = ["html_reports"] }


[[example]]
name = "strings"
path = "examples/strings/main.rs"

[[example]]
name = "arithmetics"
path = "examples/arithmetics/main.rs"

[[bench]]
name = "bootstrap"
harness = false

[[bench]]
name = "eval"
harness = false
